Fix navigation wrapping

--- a/src/Pulu/PalstaBundle/Resources/public/css/app.css
+++ b/src/Pulu/PalstaBundle/Resources/public/css/app.css
@@ -15,21 +15,27 @@ body			{background: #d2d2d2;}
 
 /* Top navigation and about */
 #navigation-row             {display: flex; justify-content: space-between; margin-top: 15px;}
+
 ul#navigation,
 ul#about                    {display: flex; list-style: none; margin: 0 -19px 0px -17px;}
 ul#about                    {align-self: flex-end;}
+ul#navigation               {flex-wrap: wrap;}
+
 ul#navigation li,
 ul#about li                 {align-self: flex-end; background-color: #286dd5; margin: 5px 4px 0px 2px;}
 ul#navigation li            {float: left;}
 ul#about li                 {float: right;}
+
 ul#navigation a,
 ul#about a                  {color: #fbfbfb; display: block; text-decoration: none; padding: 4px 6px; font: 600 16px Verdana; line-height: 20px;}
 ul#navigation a:hover,
 ul#about a:hover            {background-color: #3f87f3;}
+
 ul#navigation li.current,
 ul#about li.current         {margin-top: 0px;}
 ul#navigation li.current a,
 ul#about li.current a       {height: 48px;}
+
 #switch-language            {position: absolute; top: 10px; right: 0px; font-size: 14px; line-height: 1.2em;}
 #switch-language dd a       {cursor: pointer;}
 
